# nlp-method-comporation

./: .dockerignore  .gitignore  Dockerfile  README.md  fitting.py  main.py  predict_service.py  pyproject.toml  report.md
spam_detector/: __init__.py  bot.py  domen.py  fitting.py  predict_service.py  telegram_bot.py  utils.py
