[tool.poetry]
name = "spam-detector"
version = "0.4.0"
description = ""
authors = ["Крисанов Роман Валерьевич <rvkrisanov@yandex.ru>"]
readme = "README.md"
packages = [{include = "spam_detector"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
nltk = "^3.8.1"
seaborn = "^0.12.2"
gensim = "^4.3.1"
scikit-learn = "^1.2.2"
prettytable = "^3.7.0"
aiogram = "3.0.0b7"

[tool.poetry.scripts]
fit = "spam_detector.fitting:prepare_and_fit"
#predict_if_spam = "spam_detector.predict_service:predict_if_spam"
start_bot = "spam_detector.bot:runner"


[tool.poetry.group.dev.dependencies]
tox = "^4.5.1"
pylint = "^2.17.4"
pycodestyle = "^2.10.0"
setuptools = "^67.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
